--- a/templates/index.html
+++ b/templates/index.html
@@ -205,6 +205,7 @@
                                         <select id="config-ai_model_provider">
                                             <option value="OLLAMA">Ollama</option>
                                             <option value="GEMINI">Gemini</option>
+                                            <option value="MISTRAL">Mistral</option>
                                             <option value="NONE" selected>None</option>
                                         </select>
                                     </div>
@@ -226,6 +227,14 @@
                                         <div>
                                             <label for="config-gemini_model_name">Gemini Model Name:</label>
                                             <input type="text" id="config-gemini_model_name" value="gemini-2.5-pro">
+                                        </div>
+                                    </div>
+
+                                    <div id="mistral-config-group" class="hidden">
+                                         <h4>Mistral Configuration:</h4>
+                                        <div>
+                                            <label for="config-mistral_model_name">Mistral Model Name:</label>
+                                            <input type="text" id="config-mistral_model_name" value="ministral-3b-latest">
                                         </div>
                                     </div>
                                 </div>
