--- a/templates/similarity.html
+++ b/templates/similarity.html
@@ -61,6 +61,10 @@
                             <input type="checkbox" id="eliminate_duplicates" name="eliminate_duplicates" checked>
                             <label for="eliminate_duplicates">Limit songs per artist in results</label>
                         </div>
+                        <div class="checkbox-container">
+                            <input type="checkbox" id="mood_similarity" name="mood_similarity">
+                            <label for="mood_similarity">Filter by mood similarity (danceability, energy, etc.)</label>
+                        </div>
                     </div>
                     <button type="submit">
                         Find Similar Tracks
@@ -178,6 +182,7 @@
                 const itemId = selectedItemIdInput.value;
                 const n = document.getElementById('n').value;
                 const eliminateDuplicates = document.getElementById('eliminate_duplicates').checked;
+                const moodSimilarity = document.getElementById('mood_similarity').checked;
 
                 resultsContainer.classList.remove('hidden');
                 playlistCreator.classList.add('hidden');
@@ -195,7 +200,8 @@
                     const params = new URLSearchParams({ 
                         item_id: itemId, 
                         n: n,
-                        eliminate_duplicates: eliminateDuplicates // Always send true or false
+                        eliminate_duplicates: eliminateDuplicates, // Always send true or false
+                        mood_similarity: moodSimilarity // Send mood similarity boolean
                     });
                     const response = await fetch(`/api/similar_tracks?${params}`);
                     const data = await response.json();
